# anima-operating-system

./: ENHANCED_CHAT_MIGRATION.md  README.md  alembic.ini  debug_memory_issue.py  main.py  pyproject.toml  test_chat_issue.py  test_constructs.py  test_enhanced_chat.py
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 00b96f77f1a3_create_user_on_signup.py  0a073be13af4_add_personas_table.py  0b80fd1b2050_generate_user_table.py  3e23574acacb_add_new_user_on_sign_up.py  3fb9adb1ed3a_add_construct_relationship.py  54968739aaff_init.py  a742776e8948_add_foreign_key_constraint_to_construct_.py  bb2cd38025ee_init.py  f357d69720b4_creat_user_on_signup.py
app/: main.py
app/config/: config.py
app/crud/: construct.py
app/db/: database.py  session.py
app/middleware/: auth_supabase.py
app/models/: __init__.py  construct.py  construct_link.py  construct_relationship_fragment.py  persona.py  user.py
app/repositories/: __init__.py  construct_repository.py
app/routers/: chat.py  construct.py  simple_chat.py
app/schemas/: chat_models.py  construct_models.py  email_config.py
app/services/: __init__.py  chat_service.py  conversation_history_service.py  graph_config_service.py  llm_config_service.py  memory_service.py  message_formatter.py  model_service.py  prompt_template_service.py  response_handler.py  template_service.py  (+6 more)
baml_client/: async_client.py  async_request.py  inlinedbaml.py  parser.py  partial_types.py  sync_client.py  sync_request.py  type_builder.py  types.py
baml_src/: clients.baml  construct.baml
docs/: package.json  pnpm-workspace.yaml
supabase/: config.toml
web/: components.json  jasper-character-example.json  next.config.ts  package.json  pnpm-lock.yaml
(+106 files in other folders)
