[project]
name = "anima-operating-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "baml-py>=0.89.0",
    "decouple>=0.0.7",
    "fastapi[standard]>=0.115.12",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "python-jose[cryptography]>=3.4.0",
    "sqlalchemy>=2.0.41",
    "supabase>=2.15.1",
]

[tool.setuptools]
packages = ["app", "alembic", "supabase"]
